1. Метод .of [#484809]