@@ -10,23 +10,23 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Assert.assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Assert.assertThat(result, is(expect));
     }
 
     @Test
     public void testSortWhenAscOrder() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "k2",
                 "k2/sk1",
                 "k2/sk1/ssk2",
@@ -34,7 +34,7 @@ public class DepartmentsTest {
                 "k1/sk1",
                 "k1"
         );
-        List<String> except = Arrays.asList(
+        List<String> except = List.of(
                 "k1",
                 "k1/sk1",
                 "k2",
@@ -48,7 +48,7 @@ public class DepartmentsTest {
 
     @Test
     public void testSortWhenDescOrder() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "k1",
                 "k1/sk1",
                 "k2/sk1/ssk2",
@@ -56,7 +56,7 @@ public class DepartmentsTest {
                 "k2/sk1",
                 "k2"
         );
-        List<String> except = Arrays.asList(
+        List<String> except = List.of(
                 "k2",
                 "k2/sk1",
                 "k2/sk1/ssk1",
